<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/banner_bg"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingTop="60dp"
        >    
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >            

            <ImageView
                android:id="@+id/left_menu_00"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:src="@drawable/head"
                android:background="@drawable/icon_bg" />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/left_menu_00"
                android:text="庄奕峰"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:layout_centerVertical="true"/>            
        </RelativeLayout>    
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/tab_line"
            />
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >            
            <ImageView
                android:id="@+id/left_menu_01" 
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/left_menu_01" />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/left_menu_01"
                android:text="@string/left_menu_01"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:layout_centerVertical="true"/>            
        </RelativeLayout>
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/tab_line"
            />
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >            
            <ImageView
                android:id="@+id/left_menu_02" 
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/left_menu_02"
                />            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/left_menu_02"
                android:text="@string/left_menu_02"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:layout_centerVertical="true"/>            
        </RelativeLayout>
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/tab_line"
            />
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >            
            <ImageView
                android:id="@+id/left_menu_03" 
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/left_menu_03"
                />            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/left_menu_03"
                android:text="@string/left_menu_03"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:layout_centerVertical="true"/>            
        </RelativeLayout>
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/tab_line"
            />
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >            
            <ImageView
                android:id="@+id/left_menu_04" 
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/left_menu_04"
                />            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/left_menu_04"
                android:text="@string/left_menu_04"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:layout_centerVertical="true"/>            
        </RelativeLayout>
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/tab_line"
            />
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >            
            <ImageView
                android:id="@+id/left_menu_05" 
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/left_menu_05"
                />            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/left_menu_05"
                android:text="@string/left_menu_05"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:layout_centerVertical="true"/>            
        </RelativeLayout>
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/tab_line"
            />
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >            
            <ImageView
                android:id="@+id/left_menu_06" 
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/left_menu_06"
                />            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/left_menu_06"
                android:text="@string/left_menu_06"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:layout_centerVertical="true"/>            
        </RelativeLayout>
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/tab_line"
            />
    </LinearLayout>
    

</RelativeLayout>
