<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        >
        
        <RelativeLayout
            android:id="@+id/begin_invest" 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            
            <RelativeLayout
                android:layout_width="wrap_content"
				android:layout_height="wrap_content"
	            android:layout_centerInParent="true">
	            
	            <TextView
	                android:id="@+id/begin_invest_text" 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/water_list_sort_04"
	                android:textColor="@color/tab_text_chosen"
	                android:layout_centerHorizontal="true"
	                />
	                
	            <ImageView 
	                android:id="@+id/begin_invest_icon" 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
					android:layout_below="@id/begin_invest_text"
	                android:src="@drawable/water_arrow_down_chosen"
	                android:layout_centerHorizontal="true"
	                android:layout_marginTop="5dp"
	                android:gravity="center"/>
	                
	        </RelativeLayout>           
            
            <ImageView 
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:background="@drawable/water_small_line_gray"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
            
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/invest_time" 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            
            <RelativeLayout
                android:layout_width="wrap_content"
				android:layout_height="wrap_content"
	            android:layout_centerInParent="true">
	            
	            <TextView
	                android:id="@+id/invest_time_text" 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/water_list_sort_01"
	                android:textColor="@color/light_black"
	                android:layout_centerHorizontal="true"
	                />
	                
	            <ImageView 
	                android:id="@+id/invest_time_icon" 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
					android:layout_below="@id/invest_time_text"
	                android:src="@drawable/water_arrow_down"
	                android:layout_centerHorizontal="true"
	                android:layout_marginTop="5dp"
	                android:gravity="center"/>
	                
	        </RelativeLayout> 
            
            <ImageView 
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:background="@drawable/water_small_line_gray"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
            
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/invest_money" 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            
            <RelativeLayout
                android:layout_width="wrap_content"
				android:layout_height="wrap_content"
	            android:layout_centerInParent="true">
	            
	            <TextView
	                android:id="@+id/invest_money_text" 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/water_list_sort_02"
	                android:textColor="@color/light_black"
	                android:layout_centerHorizontal="true"
	                />
	                
	            <ImageView 
	                android:id="@+id/invest_money_icon" 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
					android:layout_below="@id/invest_money_text"
	                android:src="@drawable/water_arrow_down"
	                android:layout_centerHorizontal="true"
	                android:layout_marginTop="5dp"
	                android:gravity="center"/>
	                
	        </RelativeLayout>           
            
            <ImageView 
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:background="@drawable/water_small_line_gray"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
            
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/invest_profit" 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            
            
            <RelativeLayout
                android:layout_width="wrap_content"
				android:layout_height="wrap_content"
	            android:layout_centerInParent="true">
	            
	            <TextView
	                android:id="@+id/invest_profit_text" 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/water_list_sort_03"
	                android:textColor="@color/light_black"
	                android:layout_centerHorizontal="true"
	                />
	                
	            <ImageView 
	                android:id="@+id/invest_profit_icon" 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
					android:layout_below="@id/invest_profit_text"
	                android:src="@drawable/water_arrow_down"
	                android:layout_centerHorizontal="true"
	                android:layout_marginTop="5dp"
	                android:gravity="center"/>
	                
	        </RelativeLayout>      
            
        </RelativeLayout>
    </LinearLayout>
    <ImageView
		android:id="@+id/tab_line"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/tab_line"/>
    <ListView
	        android:id="@+id/water_list_view"
	        android:background="@color/tab_bg"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="5"
	        android:scrollbars="none"
	        android:paddingTop="5dp"
	        android:paddingBottom="10dp"
	        android:paddingLeft="25dp"
	        android:paddingRight="25dp" >
	    </ListView>
    

</LinearLayout>
